@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b30aea1d015d7939e0b833716ac85c69bae455f2 ChangeLog
+SHA1 e65bfb30b5a9910701b3712ebc84ec77bd67f422 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 5a4e11edbdd6ab92404e542df7fd6a0c60f4c937 META.yml
-SHA1 b9b2129eafd463f4610d8c70cd054d11a1ebdc96 Makefile.PL
+SHA1 6917999868a864dec7d057a43a469dadc9c540a2 META.yml
+SHA1 99d94a4f3d9b39e80c16b0c44240f44bdcc182ab Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 9ef50b4ef7ded5bc83c45eff7f984af07dfda576 lib/Net/FullAuto.pm
+SHA1 d837bd1c9229b1786ac18a735a5f770ea9bdb9d2 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 19b88aa4b55a581332a1456ae5f780960d0c9edb lib/Net/FullAuto/FA_Core.pm
+SHA1 038fb9729e7e490990969eca29835ab14caba264 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUT5ppAAoJEBa/9Pad787EU7cH/0UQ+tiTIVjRXbWTO4tKFgh2
-zPQ5DnfQdiwrkK/g3loVZr6PINAZoJHeBRSC/k86Y9p++RpYfCAv0wAxelp0fey4
-hK40KGppzWj56rPidkXKygsUO92/4AxT/niltq6q9tVvVPFJox1siFuMPE9NoX/C
-cMYK9v5LOGzHSa7GuoWZwwXLYmFm+RnLSdhV4wFP5420E5PR2xq3ynf9IIYmXecM
-y8PGuiHfW4aP2RvHRJ5hlRo4VPvqFIKZBjCakft6U8ApbalKuP8lw/OEitd8UwQd
-ExoQblGLjwQofQSZL/EsBuFmnJ6GflO/9BiUkofpCB9W3D+bRWPdD4lmIAzSWUo=
-=NTLu
+iQEcBAEBAgAGBQJUVqWcAAoJEBa/9Pad787E+MIIALKyMsLNPKFLlJb+F8WR6vDh
+jWOv0RteW+0EUgWV+/gSXQsjlLfzy0hm/TzAzajF+yIPD7huRQQm1x32/jFoy90P
+FttUNUWJueTWdhHtFS40nG8CSpKR+gJ9oTJR+BhajK5/PDDCcTPHkiGNyo6ILJN+
+ImYNjUqwO6Jx4j7OdkzHj/08Z5C9c/qy1kc87nTogWy/+jDCjgLWYKTQurW0kQqQ
+am9aSYWu3aVJd6c0mSHMP/JgFAIgqFssveK7KZ1Ctf1QEaoRpIapYxjYijd9oiW2
+BTBzWZkD8OW4KhAS5xACmdSXBPHbaHCksQna/ZmPo2oR91LUz9cvWArFA4MhqaA=
+=WLiL
 -----END PGP SIGNATURE-----
