@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999922';
+our $VERSION='0.999999999924';
 
 
 use 5.005;
