@@ -20,6 +20,16 @@
 #######################################################################
 
 
+2014-11-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999924 released.
+
+        * New version of Term::Menus paired with this release.
+
+        * Updated Amazon EC2 - gather everything for new
+          instances.
+
+
 2014-10-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999923 released.
